--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build-test": "ng build --configuration test",
+    "build-uat": "ng build --configuration uat",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -15,11 +17,13 @@
     "@angular/common": "^15.0.0",
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
+    "@angular/fire": "^7.5.0",
     "@angular/forms": "^15.0.0",
     "@angular/material": "^15.1.4",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "firebase": "^9.17.1",
     "ng-angular-popup": "^0.2.0",
     "ng-confirm-box": "^0.0.6",
     "rxjs": "~7.5.0",
